Add watcher to data.json file.

--- a/src/html/components/header.njk
+++ b/src/html/components/header.njk
@@ -1,2 +1,1 @@
-<h1 class="display-3">Bootstrap Patterns</h1>
-<p class="lead">This is a working demonstration of how you can compnentize Bootstrap using Nunjucks and Grunt.</p>
+<h1 class="display-3">Header</h1>
