--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout.njk" %}
 
 {% set base_path = "../" %}
-{% set page_title = "Home page | Bootstrap Patterns" %}
+{% set page_title = "Home page" %}
 {% set page_description = "This is the home page" %}
 {% set main_header_classes = "jumbotron jumbotron-fluid" %}
 
