--- a/src/html/layouts/card-layout.njk
+++ b/src/html/layouts/card-layout.njk
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <div class="row user-dash">
-            <div class="col-md-4  align-self-center">
+            <div class="col-md-4 custom align-self-center">
                 {% block cardHeader1 %}
 
                 {% endblock %}
