--- a/src/html/macros/macro-btnModal.njk
+++ b/src/html/macros/macro-btnModal.njk
@@ -1,5 +1,5 @@
 {% macro new(target, text, class) %}
-    <button class="btn {{ class }}" data-toggle="modal"
+    <button class="btn {{ class }} my-2" data-toggle="modal"
             data-target="{{ target }}">
         {{ text }}
     </button>
