--- a/src/html/macros/macro-task-card.njk
+++ b/src/html/macros/macro-task-card.njk
@@ -1,11 +1,12 @@
 {% import "macros/macro-taskCard-headerStatus.njk" as status %}
-{% import "macros/macro-taskCard-buttons.njk" as buttonSet %}
+{% import "macros/macro-cardHeader-executor.njk" as user %}
 {% import "macros/macro-taskCard-date.njk" as date %}
 {% import "macros/macro-taskCard-location.njk" as location %}
 {% import "macros/macro-giveEvaluation.njk" as evaluation %}
 {% import "macros/macro-btnModal.njk" as modalBtn %}
 {% import "macros/macro-modal-declineUpcoming.njk" as declineUpcoming %}
 {% import "macros/macro-modal-declineCurrent.njk" as declineCurrent %}
+{% import "macros/macro-calendar-placeholder.njk" as calendar %}
 
 {% macro add(content) %}
     <div class="card-header">
@@ -19,15 +20,7 @@
 
             <div class="col">
 
-                <p class="d-inline-block mb-0 float-right ml-2"><em>Created by: </em>
-                    <button class="btn" data-toggle="collapse"
-                            href="#viewExecutor"
-                            aria-expanded="false" aria-controls="viewExecutor"
-                            data-parent="" data-whatever="">
-                        <i class="fa fa-user-o ml-2" aria-hidden="true"></i>
-                        {{ content.createdBy }}
-                    </button>
-                </p>
+                {{ user.add(content) }}
 
             </div>
         </div>
@@ -47,69 +40,7 @@
                 {% endif %}
             </div>
             <div class="card-aside">
-                <div class="calendar-wrapper">
-                    <div class="calendar-header py-2">
-                        <i class="fa fa-angle-left" aria-hidden="true"></i>
-                        <p class="m-0 d-inline-block">March 2017</p>
-                        <i class="fa fa-angle-right" aria-hidden="true"></i>
-                    </div>
-                    <div class="calendar-body p-2">
-                        <div class="row weekdays ">
-                            <div class="col-xs-1"><p class="small">S</p></div>
-                            <div class="col-xs-1"><p class="small">M</p></div>
-                            <div class="col-xs-1"><p class="small">T</p></div>
-                            <div class="col-xs-1"><p class="small">W</p></div>
-                            <div class="col-xs-1"><p class="small">T</p></div>
-                            <div class="col-xs-1"><p class="small">F</p></div>
-                            <div class="col-xs-1"><p class="small">S</p></div>
-                        </div>
-                        <div class="row dates">
-                            <div class="col-xs-1"><p class="disabled">26</p></div>
-                            <div class="col-xs-1 selected"><p class="disabled">27</p></div>
-                            <div class="col-xs-1"><p class="disabled">28</p></div>
-                            <div class="col-xs-1"><p>1</p></div>
-                            <div class="col-xs-1"><p>2</p></div>
-                            <div class="col-xs-1"><p>3</p></div>
-                            <div class="col-xs-1"><p>4</p></div>
-                        </div>
-                        <div class="row dates">
-                            <div class="col-xs-1"><p>5</p></div>
-                            <div class="col-xs-1 selected"><p>6</p></div>
-                            <div class="col-xs-1"><p>7</p></div>
-                            <div class="col-xs-1"><p>8</p></div>
-                            <div class="col-xs-1"><p>9</p></div>
-                            <div class="col-xs-1 "><p>10</p></div>
-                            <div class="col-xs-1"><p>11</p></div>
-                        </div>
-                        <div class="row dates">
-                            <div class="col-xs-1 "><p>12</p></div>
-                            <div class="col-xs-1 selected"><p>13</p></div>
-                            <div class="col-xs-1 "><p>14</p></div>
-                            <div class="col-xs-1"><p>15</p></div>
-                            <div class="col-xs-1"><p>16</p></div>
-                            <div class="col-xs-1"><p>17</p></div>
-                            <div class="col-xs-1"><p>18</p></div>
-                        </div>
-                        <div class="row dates">
-                            <div class="col-xs-1"><p>19</p></div>
-                            <div class="col-xs-1 selected"><p>20</p></div>
-                            <div class="col-xs-1"><p>21</p></div>
-                            <div class="col-xs-1"><p>22</p></div>
-                            <div class="col-xs-1"><p>23</p></div>
-                            <div class="col-xs-1"><p>24</p></div>
-                            <div class="col-xs-1"><p>25</p></div>
-                        </div>
-                        <div class="row dates">
-                            <div class="col-xs-1"><p>26</p></div>
-                            <div class="col-xs-1 selected"><p>27</p></div>
-                            <div class="col-xs-1"><p>28</p></div>
-                            <div class="col-xs-1"><p>29</p></div>
-                            <div class="col-xs-1"><p>30</p></div>
-                            <div class="col-xs-1"><p>31</p></div>
-                            <div class="col-xs-1"><p class="disabled">1</p></div>
-                        </div>
-                    </div>
-                </div>
+                {{ calendar.new() }}
             </div>
             <div class="col">
                 {#********************Rating block*******************/#}
@@ -201,16 +132,25 @@
                             {{ modalBtn.new("#declineCurrent", "Decline task", "btn-warning") }}
                             {{ declineCurrent.show(content.createdBy, content.returnAssessment) }}
                         {% endif %}
+                        <button class="btn btn-secondary d-block">Discussion</button>
+
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         {{ location.add(content) }}
                     </div>
+                    {% if content.endNote === "true" %}
+                        <div class="col-12 alert alert-info">
+                            <small>"Discussion" should be collapse button. Expanded card block will contain all messages
+                                between you and "help-creator" regards this entry
+                            </small>
 
+                        </div>
+                    {% endif %}
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
 
