--- a/src/html/partials/footer-scripts.njk
+++ b/src/html/partials/footer-scripts.njk
@@ -1,13 +1,16 @@
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+{#<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>#}
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="../jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.js"></script>
+{#<script type="text/javascript" src="../node_modules/popper.js/dist/popper.js"></script>#}
 <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script src="http://localhost:35729/livereload.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<script src="../jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnidssOZD0WwpPZpENq0-IlAMc-0CRjwc&libraries=places&language=uk&region=UA"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnidssOZD0WwpPZpENq0-IlAMc-0CRjwc&libraries=places&language=uk&region=UA"></script>
 <script type="text/javascript" src="../src/scripts/screenMode.js"></script>
 <script type="text/javascript" src="../src/scripts/bootstrap-clockpicker.js"></script>
 <script type="text/javascript" src="../src/scripts/custom.js"></script>
