fixed page anchors on profile page

--- a/src/html/components/modal-sendHelp.njk
+++ b/src/html/components/modal-sendHelp.njk
@@ -32,8 +32,8 @@
     </div>
     <div class="success-message hidden-xs-up">
         <i class="fa fa-check-circle fa-3x" aria-hidden="true"></i>
-        <p>Your message have been sent. You can view it <a href="./user-pending.html">here</a></p>
-        <p>Your help request was saved. You can view and edit it <a href="./user-help-me.html">here</a></p>
+        <p>Your message have been sent. You can view it <a href="./user-helpme.html#searchResult">here</a></p>
+        <p>Your help request was saved. You can view and edit it <a href="./user-helpme.html">here</a></p>
     </div>
     <div class="modal fade" id="send-message" tabindex="-1" role="dialog" aria-labelledby="send-newMessage"
          aria-hidden="true">
@@ -64,6 +64,6 @@
     </div>
     <div class="success-privateMessage hidden-xs-up">
         <i class="fa fa-check-circle fa-3x" aria-hidden="true"></i>
-        <p>Your message have been sent. You can view it <a href="./user-pending.html">here</a></p>
+        <p>Your message have been sent. You can view it <a href="./results.html">here</a></p>
     </div>
 </div>
