--- a/src/html/layouts/layout.njk
+++ b/src/html/layouts/layout.njk
@@ -72,7 +72,10 @@
     {% include "partials/footer-scripts.njk" %}
 {% endblock %}
 {% block page_script %}
+    <script>
 
+
+    </script>
 {% endblock %}
 
 </body>
