--- a/src/html/templates/find-job.html
+++ b/src/html/templates/find-job.html
@@ -70,8 +70,8 @@
                     </div>
                     <div class="hidden-sm-up" id="barterSelected">
                         <div class='form-group'>
-                            <label for='need-transportation-info' class="my-label">Describe barter terms</label>
-                            <textarea id='need-transportation-info' name="info" class="form-control"
+                            <label for='need-transportation-payment' class="my-label">Describe barter terms</label>
+                            <textarea id='need-transportation-payment' name="info" class="form-control"
                                       rows='5'></textarea>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
     </fieldset>
     <div class="row">
         <div class="col-12 text-center mb-5">
-            {{ searchButton.button("Find", "results.html") }}
+            {{ searchButton.button("Find", "user-results-job.html") }}
         </div>
     </div>
 </form>
