--- a/src/html/templates/find_transportation.html
+++ b/src/html/templates/find_transportation.html
@@ -41,7 +41,7 @@
     </fieldset>
     <div class="row">
         <div class="col-12 text-center mb-5">
-            {{ searchButton.button("Find", "results.html") }}
+            {{ searchButton.button("Find", "user-results-help.html") }}
         </div>
     </div>
 </form>
