--- a/src/html/components/aside.njk
+++ b/src/html/components/aside.njk
@@ -1,14 +1,23 @@
 <ul class="nav flex-column no-gutters">
     {% for item in asideItems %}
-        <li class="nav-item sidebar aside-{{ item.menu_item }} bg-primary">
-            <a href="{{ item.link }}.html" class="btn btn-aside px-0">
+        {% if item.newMessage === "true" %}
+            <i class="fa fa-envelope-o fa-2x text-primary" id="badge-{{ item.menu_item }}" aria-hidden="true"
+               style="position: relative; left: 62px"></i>
+        <li class="nav-item sidebar aside-{{ item.menu_item }} bg-primary" data-id="{{ item.menu_item }}"
+            style="margin-top: -32px">
 
-                <i class="fa {{ item.menu_icon_class }}">
-                </i><br/>
-                {{ item.text }}
+        {% else %}
+            <li class="nav-item sidebar aside-{{ item.menu_item }} bg-primary" data-id="{{ item.menu_item }}">
+        {% endif %}
 
-            </a>
+        <a href="{{ item.link }}.html" class="btn btn-aside px-0">
+
+            <i class="fa {{ item.menu_icon_class }}">
+            </i><br/>
+            {{ item.text }}
+
+        </a>
         </li>
+
     {% endfor %}
 </ul>
-<script></script>
