--- a/src/html/macros/macro-discussionUser.njk
+++ b/src/html/macros/macro-discussionUser.njk
@@ -8,7 +8,7 @@
             {% if content.confirm === "true" %}
                 <i class="fa fa-check text-success" aria-hidden="true"></i>
 
-            {% else %}
+            {% elif content.confirm === "false" %}
                 <i class="fa fa-times text-danger"
                    aria-hidden="true"></i>
 
@@ -41,7 +41,25 @@
         <div id="collapse{{ content.name }}" class="collapse" role="tabpanel"
              aria-labelledby="heading{{ content.name }}">
             <div class="card-block">
-                <p>Here will be all messages. You also will be able to write a response</p>
+                {% if content.yourMessage === "true" %}
+                    <div class="alert alert-info">
+                        <ol>
+                            <li>You have filled form to search a babysitter</li>
+                            <li>Among matching search results you have find user "UserUser" and sent her a message
+                            </li>
+                            <li>You have received her response</li>
+                            <li>You can continue conversation or confirm UserUser as executor and then wait for her
+                                confirmation(or decline). At same time UserUser can accept your offer (even without your
+                                first confirmation) and your have to react at this.
+                            </li>
+                            <li>When (if) two confirmation will be received this help status will be changed for
+                                "upcoming" with assigned executor
+                            </li>
+                        </ol>
+                    </div>
+                {% else %}
+                    <p>Here will be all messages. You also will be able to write a response</p>
+                {% endif %}
             </div>
         </div>
     </div>
