--- a/src/html/macros/macro-helpme-card.njk
+++ b/src/html/macros/macro-helpme-card.njk
@@ -9,12 +9,18 @@
     <div class="card">
         <div class="card-header">
             <div class="row user-dash">
-                <div class="col-md-4 custom align-self-center">
+                <div class="col-md-4 align-self-center">
                     {% if content.status === "add" %}
                         {{ status.add("I need") }}
+                    {% elif content.status === "request" %}
+                        {{ status.add("Help Entry") }}
                     {% else %}
                         {{ status.add(content.status) }}
                     {% endif %}
+
+                    <button type="button" class="btn-link py-0" data-toggle="modal" data-target="#editModal">
+                        Edit
+                    </button>
 
                 </div>
                 <div class="col-md-4 align-self-center">
@@ -79,7 +85,7 @@
                         </div>
                         {#*************************************************************#}
                         <div class="col-5 w-100 text-center">
-                            {% if  content.status === "request" %}
+                            {% if  content.status === "request" and content.exampleBaby !== "true" %}
                                 <div class="col">
                                     <p class="text-warning">
                                         <small>Исполнитель User K was declined</small>
@@ -93,16 +99,25 @@
                                         <small>Исполнитель UserS is ready to do it</small>
                                     </p>
                                 </div>
+
                                 {% elif content.status === "upcoming" and content.executor %}
                                 {{ modalBtn.new("#declineFutureExModal", "Decline " + content.executor, "btn-warning") }}
                             {% endif %}
-                            {% if content.status === "request" %}
-
+                            {% if content.status === "request" and content.exampleBaby !== "true" %}
                                 <button class="btn mt-3" type="button" data-toggle="collapse"
                                         data-target="#viewDiscussions" aria-expanded="false"
                                         aria-controls="viewDiscussions">
                                     <i class="fa fa-comments-o mr-2"></i>
                                     <strong>(3)</strong>Discussions
+                                    <span class="badge badge-default"><i class="fa fa-envelope"
+                                                                         aria-hidden="true"></i></span>
+                                </button>
+                                {% elif content.status === "request" and content.exampleBaby === "true" %}
+                                <button class="btn mt-3" type="button" data-toggle="collapse"
+                                        data-target="#viewDiscussionsExample" aria-expanded="false"
+                                        aria-controls="viewDiscussionsExample">
+                                    <i class="fa fa-comments-o mr-2"></i>
+                                    <strong>(1)</strong>Discussions
                                     <span class="badge badge-default"><i class="fa fa-envelope"
                                                                          aria-hidden="true"></i></span>
                                 </button>
@@ -120,22 +135,30 @@
                         <div class="col-12">
                             {{ location.add(content) }}
                         </div>
-
+                        <div class="col-12">
+                            <a class="" data-toggle="collapse"
+                               href="#viewHelp-{{ content.id }}"
+                               aria-expanded="false" aria-controls="viewHelp-1"
+                               data-parent="" data-whatever="">
+                                View full help-information
+                            </a>
+                            <div class="collapse" id="viewHelp-{{ content.id }}">
+                                <div class="card card-block">
+                                    Here will be full description of help
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
             </div>
-            {% if content.status === "request" %}
+            {% if content.status === "request" and content.exampleBaby !== "true" %}
                 {% include "components/discussion.njk" %}
+                {% elif content.status === "request" and content.exampleBaby === "true" %}
+                {% include "components/discussionExampleBaby.njk" %}
             {% endif %}
-        </div>
-        <div class="collapse" id="collapseExample">
-            <div class="card card-block">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil
-                anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-            </div>
-        </div>
 
+
+        </div>
     </div>
 
 {% endmacro %}
