--- a/src/html/templates/my-profile.html
+++ b/src/html/templates/my-profile.html
@@ -14,7 +14,7 @@
     <div class="col">
         <div class="card">
             {{ cardheader.header(userMain) }}
-            {{ cardbody.content(userMain) }}
+            {{ cardbody.content(userMain, profileMenu) }}
         </div>
     </div>
 </div>
