fixed google map and address autocomplete

--- a/src/html/partials/footer-scripts.njk
+++ b/src/html/partials/footer-scripts.njk
@@ -8,7 +8,8 @@
 <script src="http://localhost:35729/livereload.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnidssOZD0WwpPZpENq0-IlAMc-0CRjwc&libraries=places&language=uk&region=UA"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnidssOZD0WwpPZpENq0-IlAMc-0CRjwc&libraries=places&language=en&region=EN"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 <script type="text/javascript" src="../src/scripts/screenMode.js"></script>
