--- a/src/html/templates/find-job.html
+++ b/src/html/templates/find-job.html
@@ -8,7 +8,7 @@
 {% import "macros/macro-checkboxDays.njk" as checkbox %}
 {% import "macros/macro-action-btn-link.njk" as searchButton %}
 
-<form>
+<form id="find-job">
     <h2>I can help with:</h2>
     <fieldset class="date-field">
         <legend>Date</legend>
