--- a/src/html/templates/find_transportation.html
+++ b/src/html/templates/find_transportation.html
@@ -9,7 +9,7 @@
 {% import "macros/macro-action-btn-link.njk" as searchButton %}
 
 
-<form>
+<form id="transportation-find">
     <h2>Find help with transportation</h2>
     <fieldset class="date-field">
         <legend>Date</legend>
