--- a/src/html/templates/find_babysitting.html
+++ b/src/html/templates/find_babysitting.html
@@ -8,7 +8,7 @@
 {% import "macros/macro-checkboxDays.njk" as checkbox %}
 {% import "macros/macro-action-btn-link.njk" as searchButton %}
 
-<form>
+<form id="babysitting-find">
     <h2>Find help with babysitting</h2>
     <fieldset class="date-field">
         <legend>Date</legend>
