--- a/src/html/templates/user-helpme.html
+++ b/src/html/templates/user-helpme.html
@@ -94,7 +94,7 @@
     "calendarNote": "false",
     "noteText": "",
     "status": "request",
-    "type": "babysitting(transportation)",
+    "type": "babysitting",
     "location": "15 Pine Rd, Beverly, MA",
     "time": "9am - 12am",
     "executor": "",
