--- a/src/html/templates/user-results-help.html
+++ b/src/html/templates/user-results-help.html
@@ -79,7 +79,7 @@
 </div>
 <div class="row">
     <div class="col-6 text-center">
-        {{ actionButton.button("Save", "") }}
+        {{ actionButton.button("Save", "user-helpme.html") }}
     </div>
     <div class="col-6 text-center">
         {{ actionButton.button("Discard", "index.html") }}
