--- a/src/html/macros/macro-resultHelp-card.njk
+++ b/src/html/macros/macro-resultHelp-card.njk
@@ -12,7 +12,7 @@
 
             <div class="col-md-4 text-right align-self-center">
 
-                <a class="btn" href="#" role="button">View full profile</a>
+                <a class="btn" href="{{ content.href }}" role="button" target="_blank">View full profile</a>
             </div>
         </div>
     </div>
