readme.md added

--- a/src/html/macros/macro-btn-selectHelpKind.njk
+++ b/src/html/macros/macro-btn-selectHelpKind.njk
@@ -1,5 +1,6 @@
 {% macro menuButton (element) %}
-    <a class="btn btn-primary  btn-border btn-custom btn-help mx-3 btnFind " href="{{ element.link }}">
+    <a class="btn btn-primary  btn-border btn-custom btn-help mx-3 btnFind {{ element.disabled }}"
+       href="{{ element.link }}" >
         <div class="d-flex h-100 w-100">
             <div class="align-self-center m-auto">
                 {% if element.icon %}
@@ -9,5 +10,4 @@
             </div>
         </div>
     </a>
-
 {% endmacro %}
