--- a/src/html/templates/other-user-profile.html
+++ b/src/html/templates/other-user-profile.html
@@ -12,5 +12,5 @@
 {% include "components/modal-sendHelp.njk" %}
 {% endblock %}
 {% block page_script %}
-<script type="text/javascript" src="../src/scripts/modalScript.js"></script>
+<script type="text/javascript" src="{{ base_path }}scripts/modalScript.js"></script>
 {% endblock %}
