--- a/src/html/templates/user-results-help.html
+++ b/src/html/templates/user-results-help.html
@@ -230,7 +230,7 @@
 {% endblock %}
 
 {% block page_script %}
-<script type="text/javascript" src="../src/scripts/modalScript.js"></script>
+<script type="text/javascript" src="{{ base_path }}scripts/modalScript.js"></script>
 <script>
     makeActive('aside-find');
     $('.recommend').popover(
