--- a/src/html/components/nav-user.njk
+++ b/src/html/components/nav-user.njk
@@ -4,7 +4,7 @@
             <li class="nav-item">
                 <a href="my-profile.html" class="nav-link ">
                             <span>
-                        <img src="../src/images/cat.gif">
+                        <img src="../images/cat.gif">
                         </span>
                 </a>
             </li>
