--- a/src/html/layouts/layout.njk
+++ b/src/html/layouts/layout.njk
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>{{ page_title }}</title>
     <meta name="description" content="{{ page_description }}">
-    <link href="{{ base_path }}normalize.css-master/normalize.css" rel="stylesheet">
+    {#<link href="{{ base_path }}normalize.css-master/normalize.css" rel="stylesheet">#}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ base_path }}css/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ base_path }}jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="{{ base_path }}scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,100,100italic,300,300italic,700,900&subset=latin,cyrillic-ext"
           rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=latin,latin-ext" rel="stylesheet"/>
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
-    <link rel="stylesheet" href="{{ base_path }}src/scss/bootstrap-clockpicker.css">
+    <link rel="stylesheet" href="{{ base_path }}css/bootstrap-clockpicker.css">
     {#<link rel="stylesheet" href="{{ base_path }}src/scss/custom.css">#}
     <script src="https://use.fontawesome.com/ee57c8a0cc.js"></script>
 
