icons load fixed

--- a/src/html/components/aside.njk
+++ b/src/html/components/aside.njk
@@ -12,7 +12,7 @@
 
         <a href="{{ item.link }}.html" class="btn btn-aside px-0">
 
-            <i class="fa {{ item.menu_icon_class }}">
+            <i class="fa mt-2 {{ item.menu_icon_class }} fa-3x">
             </i><br/>
             {{ item.text }}
 
